service de profile refatorada